// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Molecules/IconButton passes the snapshot test for basic setup 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Press me!"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignSelf": "flex-start",
      }
    }
  >
    <View
      animatedStyle={
        {
          "value": {
            "alignItems": "center",
            "alignSelf": "flex-start",
            "backgroundColor": "#6A7BFF",
            "borderColor": "#6A7BFF",
            "borderRadius": 8,
            "borderWidth": 1,
            "justifyContent": "center",
            "marginVertical": 4,
            "opacity": 1,
            "padding": 12,
          },
        }
      }
      collapsable={false}
      state={
        {
          "__state": {
            "_isReanimatedSharedValue": true,
            "_value": {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "backgroundColor": "#6A7BFF",
              "borderColor": "#6A7BFF",
              "borderRadius": 8,
              "borderWidth": 1,
              "justifyContent": "center",
              "marginVertical": 4,
              "opacity": 1,
              "padding": 12,
            },
            "addListener": [Function],
            "modify": [Function],
            "removeListener": [Function],
            "value": {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "backgroundColor": "#6A7BFF",
              "borderColor": "#6A7BFF",
              "borderRadius": 8,
              "borderWidth": 1,
              "justifyContent": "center",
              "marginVertical": 4,
              "opacity": 1,
              "padding": 12,
            },
          },
        }
      }
      style={
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "#6A7BFF",
          "borderColor": "#6A7BFF",
          "borderRadius": 8,
          "borderWidth": 1,
          "justifyContent": "center",
          "marginVertical": 4,
          "opacity": 1,
          "padding": 12,
        }
      }
      transition={
        {
          "duration": 100,
        }
      }
    >
      <Text />
    </View>
  </View>
</View>
`;

exports[`Molecules/IconButton passes the snapshot test for different color schemes 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Press me!"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignSelf": "flex-start",
      }
    }
  >
    <View
      animatedStyle={
        {
          "value": {
            "alignItems": "center",
            "alignSelf": "flex-start",
            "backgroundColor": "#6A7BFF",
            "borderColor": "#6A7BFF",
            "borderRadius": 8,
            "borderWidth": 1,
            "justifyContent": "center",
            "marginVertical": 4,
            "opacity": 1,
            "padding": 12,
          },
        }
      }
      collapsable={false}
      state={
        {
          "__state": {
            "_isReanimatedSharedValue": true,
            "_value": {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "backgroundColor": "#6A7BFF",
              "borderColor": "#6A7BFF",
              "borderRadius": 8,
              "borderWidth": 1,
              "justifyContent": "center",
              "marginVertical": 4,
              "opacity": 1,
              "padding": 12,
            },
            "addListener": [Function],
            "modify": [Function],
            "removeListener": [Function],
            "value": {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "backgroundColor": "#6A7BFF",
              "borderColor": "#6A7BFF",
              "borderRadius": 8,
              "borderWidth": 1,
              "justifyContent": "center",
              "marginVertical": 4,
              "opacity": 1,
              "padding": 12,
            },
          },
        }
      }
      style={
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "#6A7BFF",
          "borderColor": "#6A7BFF",
          "borderRadius": 8,
          "borderWidth": 1,
          "justifyContent": "center",
          "marginVertical": 4,
          "opacity": 1,
          "padding": 12,
        }
      }
      transition={
        {
          "duration": 100,
        }
      }
    >
      <Text
        accessibilityLabel="heart Icon"
        accessible={true}
        allowFontScaling={false}
        animate={
          {
            "alignSelf": "center",
            "color": "#FFFFFF",
          }
        }
        animatedStyle={
          {
            "value": {
              "alignSelf": "center",
              "color": "#FFFFFF",
            },
          }
        }
        collapsable={false}
        selectable={false}
        style={
          [
            {
              "color": undefined,
              "fontSize": 14.95,
            },
            {
              "alignSelf": "center",
              "color": "#FFFFFF",
            },
            {
              "fontFamily": "anticon",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            {},
          ]
        }
        transition={
          {
            "dampingRatio": 1,
            "duration": 100,
            "type": "spring",
          }
        }
      >
        
      </Text>
    </View>
  </View>
  <View
    accessibilityLabel="Press me!"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignSelf": "flex-start",
      }
    }
  >
    <View
      animatedStyle={
        {
          "value": {
            "alignItems": "center",
            "alignSelf": "flex-start",
            "backgroundColor": "#FF6AC6",
            "borderColor": "#FF6AC6",
            "borderRadius": 8,
            "borderWidth": 1,
            "justifyContent": "center",
            "marginVertical": 4,
            "opacity": 1,
            "padding": 12,
          },
        }
      }
      collapsable={false}
      state={
        {
          "__state": {
            "_isReanimatedSharedValue": true,
            "_value": {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "backgroundColor": "#FF6AC6",
              "borderColor": "#FF6AC6",
              "borderRadius": 8,
              "borderWidth": 1,
              "justifyContent": "center",
              "marginVertical": 4,
              "opacity": 1,
              "padding": 12,
            },
            "addListener": [Function],
            "modify": [Function],
            "removeListener": [Function],
            "value": {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "backgroundColor": "#FF6AC6",
              "borderColor": "#FF6AC6",
              "borderRadius": 8,
              "borderWidth": 1,
              "justifyContent": "center",
              "marginVertical": 4,
              "opacity": 1,
              "padding": 12,
            },
          },
        }
      }
      style={
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "#FF6AC6",
          "borderColor": "#FF6AC6",
          "borderRadius": 8,
          "borderWidth": 1,
          "justifyContent": "center",
          "marginVertical": 4,
          "opacity": 1,
          "padding": 12,
        }
      }
      transition={
        {
          "duration": 100,
        }
      }
    >
      <Text
        accessibilityLabel="heart Icon"
        accessible={true}
        allowFontScaling={false}
        animate={
          {
            "alignSelf": "center",
            "color": "#FFFFFF",
          }
        }
        animatedStyle={
          {
            "value": {
              "alignSelf": "center",
              "color": "#FFFFFF",
            },
          }
        }
        collapsable={false}
        selectable={false}
        style={
          [
            {
              "color": undefined,
              "fontSize": 14.95,
            },
            {
              "alignSelf": "center",
              "color": "#FFFFFF",
            },
            {
              "fontFamily": "anticon",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            {},
          ]
        }
        transition={
          {
            "dampingRatio": 1,
            "duration": 100,
            "type": "spring",
          }
        }
      >
        
      </Text>
    </View>
  </View>
</View>
`;

exports[`Molecules/IconButton passes the snapshot test for different icons 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Press me!"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignSelf": "flex-start",
      }
    }
  >
    <View
      animatedStyle={
        {
          "value": {
            "alignItems": "center",
            "alignSelf": "flex-start",
            "backgroundColor": "#6A7BFF",
            "borderColor": "#6A7BFF",
            "borderRadius": 8,
            "borderWidth": 1,
            "justifyContent": "center",
            "marginVertical": 4,
            "opacity": 1,
            "padding": 12,
          },
        }
      }
      collapsable={false}
      state={
        {
          "__state": {
            "_isReanimatedSharedValue": true,
            "_value": {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "backgroundColor": "#6A7BFF",
              "borderColor": "#6A7BFF",
              "borderRadius": 8,
              "borderWidth": 1,
              "justifyContent": "center",
              "marginVertical": 4,
              "opacity": 1,
              "padding": 12,
            },
            "addListener": [Function],
            "modify": [Function],
            "removeListener": [Function],
            "value": {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "backgroundColor": "#6A7BFF",
              "borderColor": "#6A7BFF",
              "borderRadius": 8,
              "borderWidth": 1,
              "justifyContent": "center",
              "marginVertical": 4,
              "opacity": 1,
              "padding": 12,
            },
          },
        }
      }
      style={
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "#6A7BFF",
          "borderColor": "#6A7BFF",
          "borderRadius": 8,
          "borderWidth": 1,
          "justifyContent": "center",
          "marginVertical": 4,
          "opacity": 1,
          "padding": 12,
        }
      }
      transition={
        {
          "duration": 100,
        }
      }
    >
      <Text
        accessibilityLabel="heart Icon"
        accessible={true}
        allowFontScaling={false}
        animate={
          {
            "alignSelf": "center",
            "color": "#FFFFFF",
          }
        }
        animatedStyle={
          {
            "value": {
              "alignSelf": "center",
              "color": "#FFFFFF",
            },
          }
        }
        collapsable={false}
        selectable={false}
        style={
          [
            {
              "color": undefined,
              "fontSize": 14.95,
            },
            {
              "alignSelf": "center",
              "color": "#FFFFFF",
            },
            {
              "fontFamily": "anticon",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            {},
          ]
        }
        transition={
          {
            "dampingRatio": 1,
            "duration": 100,
            "type": "spring",
          }
        }
      >
        
      </Text>
    </View>
  </View>
  <View
    accessibilityLabel="Press me!"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignSelf": "flex-start",
      }
    }
  >
    <View
      animatedStyle={
        {
          "value": {
            "alignItems": "center",
            "alignSelf": "flex-start",
            "backgroundColor": "#FFFFFF",
            "borderColor": "#6A7BFF",
            "borderRadius": 8,
            "borderWidth": 1,
            "justifyContent": "center",
            "marginVertical": 4,
            "opacity": 1,
            "padding": 12,
          },
        }
      }
      collapsable={false}
      state={
        {
          "__state": {
            "_isReanimatedSharedValue": true,
            "_value": {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "backgroundColor": "#FFFFFF",
              "borderColor": "#6A7BFF",
              "borderRadius": 8,
              "borderWidth": 1,
              "justifyContent": "center",
              "marginVertical": 4,
              "opacity": 1,
              "padding": 12,
            },
            "addListener": [Function],
            "modify": [Function],
            "removeListener": [Function],
            "value": {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "backgroundColor": "#FFFFFF",
              "borderColor": "#6A7BFF",
              "borderRadius": 8,
              "borderWidth": 1,
              "justifyContent": "center",
              "marginVertical": 4,
              "opacity": 1,
              "padding": 12,
            },
          },
        }
      }
      style={
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "#FFFFFF",
          "borderColor": "#6A7BFF",
          "borderRadius": 8,
          "borderWidth": 1,
          "justifyContent": "center",
          "marginVertical": 4,
          "opacity": 1,
          "padding": 12,
        }
      }
      transition={
        {
          "duration": 100,
        }
      }
    >
      <Text
        accessibilityLabel="cloudupload Icon"
        accessible={true}
        allowFontScaling={false}
        animate={
          {
            "alignSelf": "center",
            "color": "#6A7BFF",
          }
        }
        animatedStyle={
          {
            "value": {
              "alignSelf": "center",
              "color": "#6A7BFF",
            },
          }
        }
        collapsable={false}
        selectable={false}
        style={
          [
            {
              "color": undefined,
              "fontSize": 14.95,
            },
            {
              "alignSelf": "center",
              "color": "#6A7BFF",
            },
            {
              "fontFamily": "anticon",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            {},
          ]
        }
        transition={
          {
            "dampingRatio": 1,
            "duration": 100,
            "type": "spring",
          }
        }
      >
        
      </Text>
    </View>
  </View>
</View>
`;

exports[`Molecules/IconButton passes the snapshot test for different sizes 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Press me!"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignSelf": "flex-start",
      }
    }
  >
    <View
      animatedStyle={
        {
          "value": {
            "alignItems": "center",
            "alignSelf": "flex-start",
            "backgroundColor": "#6A7BFF",
            "borderColor": "#6A7BFF",
            "borderRadius": 4,
            "borderWidth": 1,
            "justifyContent": "center",
            "marginVertical": 4,
            "opacity": 1,
            "padding": 6,
          },
        }
      }
      collapsable={false}
      state={
        {
          "__state": {
            "_isReanimatedSharedValue": true,
            "_value": {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "backgroundColor": "#6A7BFF",
              "borderColor": "#6A7BFF",
              "borderRadius": 4,
              "borderWidth": 1,
              "justifyContent": "center",
              "marginVertical": 4,
              "opacity": 1,
              "padding": 6,
            },
            "addListener": [Function],
            "modify": [Function],
            "removeListener": [Function],
            "value": {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "backgroundColor": "#6A7BFF",
              "borderColor": "#6A7BFF",
              "borderRadius": 4,
              "borderWidth": 1,
              "justifyContent": "center",
              "marginVertical": 4,
              "opacity": 1,
              "padding": 6,
            },
          },
        }
      }
      style={
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "#6A7BFF",
          "borderColor": "#6A7BFF",
          "borderRadius": 4,
          "borderWidth": 1,
          "justifyContent": "center",
          "marginVertical": 4,
          "opacity": 1,
          "padding": 6,
        }
      }
      transition={
        {
          "duration": 100,
        }
      }
    >
      <Text
        accessibilityLabel="heart Icon"
        accessible={true}
        allowFontScaling={false}
        animate={
          {
            "alignSelf": "center",
            "color": "#FFFFFF",
          }
        }
        animatedStyle={
          {
            "value": {
              "alignSelf": "center",
              "color": "#FFFFFF",
            },
          }
        }
        collapsable={false}
        selectable={false}
        style={
          [
            {
              "color": undefined,
              "fontSize": 10.35,
            },
            {
              "alignSelf": "center",
              "color": "#FFFFFF",
            },
            {
              "fontFamily": "anticon",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            {},
          ]
        }
        transition={
          {
            "dampingRatio": 1,
            "duration": 100,
            "type": "spring",
          }
        }
      >
        
      </Text>
    </View>
  </View>
  <View
    accessibilityLabel="Press me!"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignSelf": "flex-start",
      }
    }
  >
    <View
      animatedStyle={
        {
          "value": {
            "alignItems": "center",
            "alignSelf": "flex-start",
            "backgroundColor": "#6A7BFF",
            "borderColor": "#6A7BFF",
            "borderRadius": 8,
            "borderWidth": 1,
            "justifyContent": "center",
            "marginVertical": 4,
            "opacity": 1,
            "padding": 8,
          },
        }
      }
      collapsable={false}
      state={
        {
          "__state": {
            "_isReanimatedSharedValue": true,
            "_value": {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "backgroundColor": "#6A7BFF",
              "borderColor": "#6A7BFF",
              "borderRadius": 8,
              "borderWidth": 1,
              "justifyContent": "center",
              "marginVertical": 4,
              "opacity": 1,
              "padding": 8,
            },
            "addListener": [Function],
            "modify": [Function],
            "removeListener": [Function],
            "value": {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "backgroundColor": "#6A7BFF",
              "borderColor": "#6A7BFF",
              "borderRadius": 8,
              "borderWidth": 1,
              "justifyContent": "center",
              "marginVertical": 4,
              "opacity": 1,
              "padding": 8,
            },
          },
        }
      }
      style={
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "#6A7BFF",
          "borderColor": "#6A7BFF",
          "borderRadius": 8,
          "borderWidth": 1,
          "justifyContent": "center",
          "marginVertical": 4,
          "opacity": 1,
          "padding": 8,
        }
      }
      transition={
        {
          "duration": 100,
        }
      }
    >
      <Text
        accessibilityLabel="heart Icon"
        accessible={true}
        allowFontScaling={false}
        animate={
          {
            "alignSelf": "center",
            "color": "#FFFFFF",
          }
        }
        animatedStyle={
          {
            "value": {
              "alignSelf": "center",
              "color": "#FFFFFF",
            },
          }
        }
        collapsable={false}
        selectable={false}
        style={
          [
            {
              "color": undefined,
              "fontSize": 12.649999999999999,
            },
            {
              "alignSelf": "center",
              "color": "#FFFFFF",
            },
            {
              "fontFamily": "anticon",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            {},
          ]
        }
        transition={
          {
            "dampingRatio": 1,
            "duration": 100,
            "type": "spring",
          }
        }
      >
        
      </Text>
    </View>
  </View>
  <View
    accessibilityLabel="Press me!"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignSelf": "flex-start",
      }
    }
  >
    <View
      animatedStyle={
        {
          "value": {
            "alignItems": "center",
            "alignSelf": "flex-start",
            "backgroundColor": "#6A7BFF",
            "borderColor": "#6A7BFF",
            "borderRadius": 8,
            "borderWidth": 1,
            "justifyContent": "center",
            "marginVertical": 4,
            "opacity": 1,
            "padding": 12,
          },
        }
      }
      collapsable={false}
      state={
        {
          "__state": {
            "_isReanimatedSharedValue": true,
            "_value": {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "backgroundColor": "#6A7BFF",
              "borderColor": "#6A7BFF",
              "borderRadius": 8,
              "borderWidth": 1,
              "justifyContent": "center",
              "marginVertical": 4,
              "opacity": 1,
              "padding": 12,
            },
            "addListener": [Function],
            "modify": [Function],
            "removeListener": [Function],
            "value": {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "backgroundColor": "#6A7BFF",
              "borderColor": "#6A7BFF",
              "borderRadius": 8,
              "borderWidth": 1,
              "justifyContent": "center",
              "marginVertical": 4,
              "opacity": 1,
              "padding": 12,
            },
          },
        }
      }
      style={
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "#6A7BFF",
          "borderColor": "#6A7BFF",
          "borderRadius": 8,
          "borderWidth": 1,
          "justifyContent": "center",
          "marginVertical": 4,
          "opacity": 1,
          "padding": 12,
        }
      }
      transition={
        {
          "duration": 100,
        }
      }
    >
      <Text
        accessibilityLabel="heart Icon"
        accessible={true}
        allowFontScaling={false}
        animate={
          {
            "alignSelf": "center",
            "color": "#FFFFFF",
          }
        }
        animatedStyle={
          {
            "value": {
              "alignSelf": "center",
              "color": "#FFFFFF",
            },
          }
        }
        collapsable={false}
        selectable={false}
        style={
          [
            {
              "color": undefined,
              "fontSize": 14.95,
            },
            {
              "alignSelf": "center",
              "color": "#FFFFFF",
            },
            {
              "fontFamily": "anticon",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            {},
          ]
        }
        transition={
          {
            "dampingRatio": 1,
            "duration": 100,
            "type": "spring",
          }
        }
      >
        
      </Text>
    </View>
  </View>
  <View
    accessibilityLabel="Press me!"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignSelf": "flex-start",
      }
    }
  >
    <View
      animatedStyle={
        {
          "value": {
            "alignItems": "center",
            "alignSelf": "flex-start",
            "backgroundColor": "#6A7BFF",
            "borderColor": "#6A7BFF",
            "borderRadius": 8,
            "borderWidth": 1,
            "justifyContent": "center",
            "marginVertical": 4,
            "opacity": 1,
            "padding": 16,
          },
        }
      }
      collapsable={false}
      state={
        {
          "__state": {
            "_isReanimatedSharedValue": true,
            "_value": {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "backgroundColor": "#6A7BFF",
              "borderColor": "#6A7BFF",
              "borderRadius": 8,
              "borderWidth": 1,
              "justifyContent": "center",
              "marginVertical": 4,
              "opacity": 1,
              "padding": 16,
            },
            "addListener": [Function],
            "modify": [Function],
            "removeListener": [Function],
            "value": {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "backgroundColor": "#6A7BFF",
              "borderColor": "#6A7BFF",
              "borderRadius": 8,
              "borderWidth": 1,
              "justifyContent": "center",
              "marginVertical": 4,
              "opacity": 1,
              "padding": 16,
            },
          },
        }
      }
      style={
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "#6A7BFF",
          "borderColor": "#6A7BFF",
          "borderRadius": 8,
          "borderWidth": 1,
          "justifyContent": "center",
          "marginVertical": 4,
          "opacity": 1,
          "padding": 16,
        }
      }
      transition={
        {
          "duration": 100,
        }
      }
    >
      <Text
        accessibilityLabel="heart Icon"
        accessible={true}
        allowFontScaling={false}
        animate={
          {
            "alignSelf": "center",
            "color": "#FFFFFF",
          }
        }
        animatedStyle={
          {
            "value": {
              "alignSelf": "center",
              "color": "#FFFFFF",
            },
          }
        }
        collapsable={false}
        selectable={false}
        style={
          [
            {
              "color": undefined,
              "fontSize": 17.25,
            },
            {
              "alignSelf": "center",
              "color": "#FFFFFF",
            },
            {
              "fontFamily": "anticon",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            {},
          ]
        }
        transition={
          {
            "dampingRatio": 1,
            "duration": 100,
            "type": "spring",
          }
        }
      >
        
      </Text>
    </View>
  </View>
</View>
`;

exports[`Molecules/IconButton passes the snapshot test for different variants 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Press me!"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignSelf": "flex-start",
      }
    }
  >
    <View
      animatedStyle={
        {
          "value": {
            "alignItems": "center",
            "alignSelf": "flex-start",
            "backgroundColor": "#6A7BFF",
            "borderColor": "#6A7BFF",
            "borderRadius": 8,
            "borderWidth": 1,
            "justifyContent": "center",
            "marginVertical": 4,
            "opacity": 1,
            "padding": 12,
          },
        }
      }
      collapsable={false}
      state={
        {
          "__state": {
            "_isReanimatedSharedValue": true,
            "_value": {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "backgroundColor": "#6A7BFF",
              "borderColor": "#6A7BFF",
              "borderRadius": 8,
              "borderWidth": 1,
              "justifyContent": "center",
              "marginVertical": 4,
              "opacity": 1,
              "padding": 12,
            },
            "addListener": [Function],
            "modify": [Function],
            "removeListener": [Function],
            "value": {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "backgroundColor": "#6A7BFF",
              "borderColor": "#6A7BFF",
              "borderRadius": 8,
              "borderWidth": 1,
              "justifyContent": "center",
              "marginVertical": 4,
              "opacity": 1,
              "padding": 12,
            },
          },
        }
      }
      style={
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "#6A7BFF",
          "borderColor": "#6A7BFF",
          "borderRadius": 8,
          "borderWidth": 1,
          "justifyContent": "center",
          "marginVertical": 4,
          "opacity": 1,
          "padding": 12,
        }
      }
      transition={
        {
          "duration": 100,
        }
      }
    >
      <Text
        accessibilityLabel="heart Icon"
        accessible={true}
        allowFontScaling={false}
        animate={
          {
            "alignSelf": "center",
            "color": "#FFFFFF",
          }
        }
        animatedStyle={
          {
            "value": {
              "alignSelf": "center",
              "color": "#FFFFFF",
            },
          }
        }
        collapsable={false}
        selectable={false}
        style={
          [
            {
              "color": undefined,
              "fontSize": 14.95,
            },
            {
              "alignSelf": "center",
              "color": "#FFFFFF",
            },
            {
              "fontFamily": "anticon",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            {},
          ]
        }
        transition={
          {
            "dampingRatio": 1,
            "duration": 100,
            "type": "spring",
          }
        }
      >
        
      </Text>
    </View>
  </View>
  <View
    accessibilityLabel="Press me!"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignSelf": "flex-start",
      }
    }
  >
    <View
      animatedStyle={
        {
          "value": {
            "alignItems": "center",
            "alignSelf": "flex-start",
            "backgroundColor": "#FFFFFF",
            "borderColor": "#6A7BFF",
            "borderRadius": 8,
            "borderWidth": 1,
            "justifyContent": "center",
            "marginVertical": 4,
            "opacity": 1,
            "padding": 12,
          },
        }
      }
      collapsable={false}
      state={
        {
          "__state": {
            "_isReanimatedSharedValue": true,
            "_value": {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "backgroundColor": "#FFFFFF",
              "borderColor": "#6A7BFF",
              "borderRadius": 8,
              "borderWidth": 1,
              "justifyContent": "center",
              "marginVertical": 4,
              "opacity": 1,
              "padding": 12,
            },
            "addListener": [Function],
            "modify": [Function],
            "removeListener": [Function],
            "value": {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "backgroundColor": "#FFFFFF",
              "borderColor": "#6A7BFF",
              "borderRadius": 8,
              "borderWidth": 1,
              "justifyContent": "center",
              "marginVertical": 4,
              "opacity": 1,
              "padding": 12,
            },
          },
        }
      }
      style={
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "#FFFFFF",
          "borderColor": "#6A7BFF",
          "borderRadius": 8,
          "borderWidth": 1,
          "justifyContent": "center",
          "marginVertical": 4,
          "opacity": 1,
          "padding": 12,
        }
      }
      transition={
        {
          "duration": 100,
        }
      }
    >
      <Text
        accessibilityLabel="heart Icon"
        accessible={true}
        allowFontScaling={false}
        animate={
          {
            "alignSelf": "center",
            "color": "#6A7BFF",
          }
        }
        animatedStyle={
          {
            "value": {
              "alignSelf": "center",
              "color": "#6A7BFF",
            },
          }
        }
        collapsable={false}
        selectable={false}
        style={
          [
            {
              "color": undefined,
              "fontSize": 14.95,
            },
            {
              "alignSelf": "center",
              "color": "#6A7BFF",
            },
            {
              "fontFamily": "anticon",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            {},
          ]
        }
        transition={
          {
            "dampingRatio": 1,
            "duration": 100,
            "type": "spring",
          }
        }
      >
        
      </Text>
    </View>
  </View>
  <View
    accessibilityLabel="Press me!"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignSelf": "flex-start",
      }
    }
  >
    <View
      animatedStyle={
        {
          "value": {
            "alignItems": "center",
            "alignSelf": "flex-start",
            "backgroundColor": "transparent",
            "borderRadius": 8,
            "justifyContent": "center",
            "marginVertical": 4,
            "opacity": 1,
            "padding": 12,
          },
        }
      }
      collapsable={false}
      state={
        {
          "__state": {
            "_isReanimatedSharedValue": true,
            "_value": {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "backgroundColor": "transparent",
              "borderRadius": 8,
              "justifyContent": "center",
              "marginVertical": 4,
              "opacity": 1,
              "padding": 12,
            },
            "addListener": [Function],
            "modify": [Function],
            "removeListener": [Function],
            "value": {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "backgroundColor": "transparent",
              "borderRadius": 8,
              "justifyContent": "center",
              "marginVertical": 4,
              "opacity": 1,
              "padding": 12,
            },
          },
        }
      }
      style={
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "transparent",
          "borderRadius": 8,
          "justifyContent": "center",
          "marginVertical": 4,
          "opacity": 1,
          "padding": 12,
        }
      }
      transition={
        {
          "duration": 100,
        }
      }
    >
      <Text
        accessibilityLabel="heart Icon"
        accessible={true}
        allowFontScaling={false}
        animate={
          {
            "alignSelf": "center",
            "color": "#6A7BFF",
          }
        }
        animatedStyle={
          {
            "value": {
              "alignSelf": "center",
              "color": "#6A7BFF",
            },
          }
        }
        collapsable={false}
        selectable={false}
        style={
          [
            {
              "color": undefined,
              "fontSize": 14.95,
            },
            {
              "alignSelf": "center",
              "color": "#6A7BFF",
            },
            {
              "fontFamily": "anticon",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            {},
          ]
        }
        transition={
          {
            "dampingRatio": 1,
            "duration": 100,
            "type": "spring",
          }
        }
      >
        
      </Text>
    </View>
  </View>
</View>
`;

exports[`Molecules/IconButton passes the snapshot test for loading state 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Loading"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignSelf": "flex-start",
      }
    }
  >
    <View
      animatedStyle={
        {
          "value": {
            "alignItems": "center",
            "alignSelf": "flex-start",
            "backgroundColor": "#6A7BFF",
            "borderColor": "#6A7BFF",
            "borderRadius": 8,
            "borderWidth": 1,
            "justifyContent": "center",
            "marginVertical": 4,
            "opacity": 0.5,
            "padding": 12,
          },
        }
      }
      collapsable={false}
      state={
        {
          "__state": {
            "_isReanimatedSharedValue": true,
            "_value": {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "backgroundColor": "#6A7BFF",
              "borderColor": "#6A7BFF",
              "borderRadius": 8,
              "borderWidth": 1,
              "justifyContent": "center",
              "marginVertical": 4,
              "opacity": 0.5,
              "padding": 12,
            },
            "addListener": [Function],
            "modify": [Function],
            "removeListener": [Function],
            "value": {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "backgroundColor": "#6A7BFF",
              "borderColor": "#6A7BFF",
              "borderRadius": 8,
              "borderWidth": 1,
              "justifyContent": "center",
              "marginVertical": 4,
              "opacity": 0.5,
              "padding": 12,
            },
          },
        }
      }
      style={
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "#6A7BFF",
          "borderColor": "#6A7BFF",
          "borderRadius": 8,
          "borderWidth": 1,
          "justifyContent": "center",
          "marginVertical": 4,
          "opacity": 0.5,
          "padding": 12,
        }
      }
      transition={
        {
          "duration": 100,
        }
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "flex": 1,
              "justifyContent": "center",
            },
            [
              {
                "alignSelf": "flex-start",
              },
              {
                "color": "#FFFFFF",
                "flex": 0,
              },
            ],
          ]
        }
      >
        <View
          accessibilityLabel="Loading indicator"
          accessibilityRole="progressbar"
          accessible={true}
          animate={
            {
              "color": "#FFFFFF",
            }
          }
          collapsable={false}
          rawSize={15}
          style={
            {
              "height": 15,
              "width": 15,
            }
          }
          variant="spinner"
        >
          <View
            collapsable={false}
            style={
              {
                "alignItems": "center",
                "bottom": 0,
                "justifyContent": "center",
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          >
            <View
              collapsable={false}
              style={
                {
                  "height": 15,
                  "transform": [
                    {
                      "rotate": "82.5deg",
                    },
                    {
                      "rotate": "0deg",
                    },
                  ],
                  "width": 15,
                }
              }
            >
              <View
                collapsable={false}
                style={
                  {
                    "height": 7.5,
                    "overflow": "hidden",
                    "width": 15,
                  }
                }
              >
                <View
                  collapsable={false}
                  style={
                    {
                      "height": 15,
                      "transform": [
                        {
                          "translateY": 0,
                        },
                        {
                          "rotate": "-172.5deg",
                        },
                      ],
                      "width": 15,
                    }
                  }
                >
                  <View
                    collapsable={false}
                    style={
                      {
                        "height": 7.5,
                        "overflow": "hidden",
                        "width": 15,
                      }
                    }
                  >
                    <View
                      collapsable={false}
                      style={
                        {
                          "borderColor": "#FFFFFF",
                          "borderRadius": 7.5,
                          "borderWidth": 1.5,
                          "height": 15,
                          "width": 15,
                        }
                      }
                    />
                  </View>
                </View>
              </View>
            </View>
          </View>
          <View
            collapsable={false}
            style={
              {
                "alignItems": "center",
                "bottom": 0,
                "justifyContent": "center",
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          >
            <View
              collapsable={false}
              style={
                {
                  "height": 15,
                  "transform": [
                    {
                      "rotate": "82.5deg",
                    },
                    {
                      "rotate": "0deg",
                    },
                  ],
                  "width": 15,
                }
              }
            >
              <View
                collapsable={false}
                style={
                  {
                    "height": 7.5,
                    "overflow": "hidden",
                    "top": 7.5,
                    "width": 15,
                  }
                }
              >
                <View
                  collapsable={false}
                  style={
                    {
                      "height": 15,
                      "transform": [
                        {
                          "translateY": -7.5,
                        },
                        {
                          "rotate": "352.5deg",
                        },
                      ],
                      "width": 15,
                    }
                  }
                >
                  <View
                    collapsable={false}
                    style={
                      {
                        "height": 7.5,
                        "overflow": "hidden",
                        "width": 15,
                      }
                    }
                  >
                    <View
                      collapsable={false}
                      style={
                        {
                          "borderColor": "#FFFFFF",
                          "borderRadius": 7.5,
                          "borderWidth": 1.5,
                          "height": 15,
                          "width": 15,
                        }
                      }
                    />
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Molecules/IconButton passes the snapshot test when using style props 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Press me!"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignSelf": "flex-start",
      }
    }
  >
    <View
      animatedStyle={
        {
          "value": {
            "alignItems": "center",
            "alignSelf": "flex-start",
            "backgroundColor": "#6A7BFF",
            "borderColor": "#C5CEE0",
            "borderRadius": 8,
            "borderWidth": 2,
            "justifyContent": "center",
            "marginVertical": 4,
            "opacity": 1,
            "padding": 12,
          },
        }
      }
      collapsable={false}
      state={
        {
          "__state": {
            "_isReanimatedSharedValue": true,
            "_value": {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "backgroundColor": "#6A7BFF",
              "borderColor": "#C5CEE0",
              "borderRadius": 8,
              "borderWidth": 2,
              "justifyContent": "center",
              "marginVertical": 4,
              "opacity": 1,
              "padding": 12,
            },
            "addListener": [Function],
            "modify": [Function],
            "removeListener": [Function],
            "value": {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "backgroundColor": "#6A7BFF",
              "borderColor": "#C5CEE0",
              "borderRadius": 8,
              "borderWidth": 2,
              "justifyContent": "center",
              "marginVertical": 4,
              "opacity": 1,
              "padding": 12,
            },
          },
        }
      }
      style={
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "#6A7BFF",
          "borderColor": "#C5CEE0",
          "borderRadius": 8,
          "borderWidth": 2,
          "justifyContent": "center",
          "marginVertical": 4,
          "opacity": 1,
          "padding": 12,
        }
      }
      transition={
        {
          "duration": 100,
        }
      }
    >
      <Text
        accessibilityLabel="heart Icon"
        accessible={true}
        allowFontScaling={false}
        animate={
          {
            "alignSelf": "center",
            "color": "#FFFFFF",
          }
        }
        animatedStyle={
          {
            "value": {
              "alignSelf": "center",
              "color": "#FFFFFF",
            },
          }
        }
        collapsable={false}
        selectable={false}
        style={
          [
            {
              "color": undefined,
              "fontSize": 14.95,
            },
            {
              "alignSelf": "center",
              "color": "#FFFFFF",
            },
            {
              "fontFamily": "anticon",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            {},
          ]
        }
        transition={
          {
            "dampingRatio": 1,
            "duration": 100,
            "type": "spring",
          }
        }
      >
        
      </Text>
    </View>
  </View>
</View>
`;
